--- a/business-module/pom.xml
+++ b/business-module/pom.xml
@@ -55,9 +55,14 @@
         </dependency>
 
         <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.18.2</version>
+        </dependency>
+        <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
-            <version>2.15.2</version> <!-- Используйте актуальную версию -->
+            <version>2.18.2</version>
         </dependency>
 
 
